se estilizo el responsive

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mdi/react": "^1.6.1",
     "@react-hook/media-query": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
