se despliega la version 2.0

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@react-hook/media-query": "^1.1.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
